<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_bg"
    tools:context="com.softdesign.devintensive.ui.activities.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:padding="@dimen/size_small_24"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_tv"
            android:textSize="@dimen/size_small_24"
            android:textColor="@color/red"
            android:paddingRight="@dimen/size_big_72" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/login_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/e_mail_hint_et"
                android:inputType="textEmailAddress"
                android:text="@string/mail_et"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:focusable="true"
                android:paddingRight="@dimen/spacing_small_8" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/pass_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/pass_et"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:focusable="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_btn_et"
            android:textColor="@color/white"
            android:background="@color/red" />

        <TextView
            android:id="@+id/rest_pass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small_8"
            android:text="@string/rest_pass_tv" />

    </LinearLayout>
</RelativeLayout>
