<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/gray">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_margin="@dimen/spicing_small_10">
                <TextView
                    style="@style/headerTextUp"
                    android:text="@string/num_rating"/>
                <TextView
                    style="@style/headerTextBottom"
                    android:text="@string/rating"
                    />
            </LinearLayout>
            <View
                android:layout_height="match_parent"
                android:layout_width="@dimen/line_size"
                android:background="@color/gray_light"
                android:layout_margin="@dimen/spicing_small_10"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_margin="@dimen/spicing_small_10">
                <TextView
                    style="@style/headerTextUp"
                    android:text="@string/num_lines"/>
                <TextView
                    style="@style/headerTextBottom"
                    android:text="@string/lines_nums"/>
            </LinearLayout>
            <View
                android:layout_height="match_parent"
                android:layout_width="@dimen/line_size"
                android:background="@color/gray_light"
                android:layout_margin="@dimen/spicing_small_10"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_margin="@dimen/spicing_small_10">
                <TextView
                    style="@style/headerTextUp"
                    android:text="@string/num_project"/>
                <TextView
                    style="@style/headerTextBottom"
                    android:text="@string/projects"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_phone_black_24dp"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_big_72"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_marginLeft="@dimen/spicing_medium_32"
                android:layout_marginRight="@dimen/spicing_normal_16">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/phone_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Мобильный телефон"
                        android:inputType="phone"
                        android:text="+79178120624"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:focusable="false"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/call_img"
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/gray_light"
            android:layout_marginLeft="@dimen/spicing_larger_72"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_mail_black_24dp"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_big_72"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_marginLeft="@dimen/spicing_medium_32"
                android:layout_marginRight="@dimen/spicing_normal_16">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="E-mail"
                        android:inputType="textEmailAddress"
                        android:text="vovik@mail.ru"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:focusable="false"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <ImageView
                android:id="@+id/email_img"
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/gray_light"
            android:layout_marginLeft="@dimen/spicing_larger_72"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_vkontakte"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_big_72"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_marginLeft="@dimen/spicing_medium_32"
                android:layout_marginRight="@dimen/spicing_normal_16">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/vk_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Профиль в VK"
                        android:inputType="text"
                        android:text="vk.com/v_n_tarasov"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:focusable="false"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <ImageView
                android:id="@+id/vk_img"
                style="@style/icon.right"
                android:src="@drawable/ic_remove_red_eye_black_24dp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/gray_light"
            android:layout_marginLeft="@dimen/spicing_larger_72"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_github"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_big_72"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_marginLeft="@dimen/spicing_medium_32"
                android:layout_marginRight="@dimen/spicing_normal_16">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/github_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Репозиторий"
                        android:inputType="text"
                        android:text="github.com/vovikt/DevIntensive"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:focusable="false"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <ImageView
                android:id="@+id/github_img"
                style="@style/icon.right"
                android:src="@drawable/ic_remove_red_eye_black_24dp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:background="@color/gray_light"
            android:layout_marginLeft="@dimen/spicing_larger_72"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            >
            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle_black_24dp"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_marginLeft="@dimen/spicing_medium_32"
                android:layout_marginRight="@dimen/spicing_normal_16">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/about_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="О себе"
                        android:inputType="textMultiLine"
                        android:text="@string/about"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        android:focusable="false"
                        />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>